<resources>
    <string name="app_name">421 Go</string>
    <string name="logo_welcome">Logo accueil</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="new_game_err_min_players">Il faut au moins 2 joueurs pour lancer une partie.</string>
    <string name="rank_welcome">Scores</string>
    <string name="exit_welcome">Quitter</string>
    <string name="setting_welcome">Paramètres</string>
    <string name="return_to_welcome">Retour à l\'accueil</string>
    <string name="players">Joueurs</string>
    <string name="add_players">Ajouter un joueur</string>
    <string name="target_score_new_game">Score cible</string>
    <string name="add_one_player">Ajouter</string>
    <string name="start_game">Démarrer la partie</string>
    <string name="err_play_again">"Impossible de relancer la partie."</string>
    <string name="remaining_throws">Lancers restants : </string>
    <string name="start_throws">Lancer les dés</string>
    <string name="restart_throws">Relancer</string>
    <string name="submit">Confirmer</string>
    <string name="reserve_game">Réserve</string>
    <string name="round_finish">Tour terminé !</string>
    <string name="game_finish">Partie terminée !</string>
    <string name="restart_game">Rejouer</string>
    <string name="quit_game">Quitter</string>
    <string name="winner_crown">La courronne du vainqueur</string>
    <string name="end_game">Fin</string>
    <string name="infos_de_jeu">INFOS DE JEU</string>
    <string name="combinaisons_possibles">COMBINAISONS POSSIBLES</string>
    <string name="_421_10_points">421 (10 points)</string>
    <string name="fiche">Fiche [1,1,N] (N points)</string>
    <string name="baraque">Baraque [N, N, N] (N points)</string>
    <string name="exception_baraque">Exception : vaut 7 points si N est égal à 1.</string>
    <string name="suite">Suite [N, N+1, N+2] (2 points)</string>
    <string name="other_combination">Autres combinaisons : 1 point</string>
    <string name="scores">Scores</string>
</resources>
