<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <Button
        android:id="@+id/newGameBTN"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:background="#FAB44D"
        android:text="@string/new_game"
        android:textColor="#FF5722"
        android:textColorHighlight="#FF9800"
        android:textColorLink="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/rankBTN"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:background="#FAB44D"
        android:text="@string/rank_welcome"
        android:textColor="#FF5722"
        android:textColorLink="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <ImageButton
        android:id="@+id/exitBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/exit_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/settingBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="232dp"
        android:layout_height="154dp"
        android:contentDescription="@string/logo_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>